--- a/booking/templates/table_list.html
+++ b/booking/templates/table_list.html
@@ -9,12 +9,13 @@
 {% block content %}
 <div class="container-wrapper">
   <div class="table-img">
-    <img src="{% static 'images/afrik_logo.png' %}" alt="African Kitchen background" width="200" height="100">
+    
+    
   </div>
   <div class="content-wrapper main-column">
     <div class="text-area content">
       <!-- Title and about us sections -->
-      <h1 class="text-center green-heading  cursive-heading "><span>There are a lot of  capacittes of  Table to choose from</span></h1>
+      <h1 class="text-center green-heading  cursive-heading "><span>Book Your Table Here</span></h1>
       <h3 class="text-center green-heading  ">
         Make your choice
       </h3>
