--- a/TEMPLATES_DIR/includes/footer.html
+++ b/TEMPLATES_DIR/includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer mt-auto py-3 dark-bg">
+<footer class="footer mt-auto py-3  bg-success">
     <p class="m-0 text-center text-white d-flex align-items-center justify-content-center">
         Follow us:
         <!-- Facebook link opening in a new tab -->
