--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -3,52 +3,60 @@
 {% load static %}
 {% block extra_css %}
 
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 {% endblock %}
 
 {% block content %}
-    <h1>Contact Form</h1>
 
-    <form method="post" action="{% url 'contact' %}">
-        {% csrf_token %}
+<div class="background-image">
+    <div class="container form-container">
 
-        <div class="form-group">
-            <label for="{{ form.name.id_for_label }}">Name:</label>
-            {{ form.name }}
-        </div>
+        <h1 class="text-center green-heading cursive-heading ">Event Contact Form</h1>
 
-        <div class="form-group">
-            <label for="{{ form.email.id_for_label }}">Email:</label>
-            {{ form.email }}
-        </div>
+        <form method="post" action="{% url 'contact' %}">
+            {% csrf_token %}
 
-        <div class="form-group">
-            <label for="{{ form.phone.id_for_label }}">Phone:</label>
-            {{ form.phone }}
-        </div>
+            <div class="form-group">
+                <label for="{{ form.name.id_for_label }}">Name:</label>
+                {{ form.name }}
+            </div>
 
-        <div class="form-group">
-            <label for="{{ form.choice_of_event.id_for_label }}">Choice of Event:</label>
-            {{ form.choice_of_event }}
-        </div>
+            <div class="form-group">
+                <label for="{{ form.email.id_for_label }}">Email:</label>
+                {{ form.email }}
+            </div>
 
-        <div class="form-group">
-            <label for="{{ form.number_of_guest.id_for_label }}">Number of Guests:</label>
-            {{ form.number_of_guest }}
-        </div>
+            <div class="form-group">
+                <label for="{{ form.phone.id_for_label }}">Phone:</label>
+                {{ form.phone }}
+            </div>
 
-        <div class="form-group">
-            <label for="{{ form.propose_date_time.id_for_label }}">Proposed Date and Time:</label>
-            {{ form.propose_date_time }}
-        </div>
+            <div class="form-group">
+                <label for="{{ form.choice_of_event.id_for_label }}">Choice of Event:</label>
+                {{ form.choice_of_event }}
+            </div>
 
-        <div class="form-group">
-            <label for="{{ form.other_info.id_for_label }}">Other Information:</label>
-            {{ form.other_info }}
-        </div>
+            <div class="form-group">
+                <label for="{{ form.number_of_guest.id_for_label }}">Number of Guests:</label>
+                {{ form.number_of_guest }}
+            </div>
 
-        <div class="form-group">
-            <input type="submit" value="Submit" class="btn btn-primary">
-        </div>
-    </form>
+            <div class="form-group">
+                <label for="{{ form.propose_date_time.id_for_label }}">Proposed Date and Time:</label>
+                {{ form.propose_date_time }}
+            </div>
+
+            <div class="form-group">
+                <label for="{{ form.other_info.id_for_label }}">Other Information:</label>
+                {{ form.other_info }}
+            </div>
+
+            <div class="form-group">
+                <input type="submit" value="Submit" class="btn btn-primary">
+            </div>
+        </form>
+
+    </div>
+</div>
+
 {% endblock %}
