--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -6,13 +6,13 @@
 
 <div class="container-wrapper">
     <div class="hero-img">
-        <img src="{% static 'images/afrik_logo.png' %}" alt="African Kitchen background" width="200" height="100">
+
     </div>
     <div class="content-wrapper main-column">
         <div class="text-area content">
             <!-- Title and about us sections -->
             <h1 class="text-center  green-heading cursive-heading ">
-                *Ndewo*<span>*Wilkommen*</span><span>*Welcome*</span><span>*Bonjour*</span>
+                *Ndewo**Wilkommen*
             </h1>
             <div>
                 <p>
@@ -24,8 +24,7 @@
                 <p>
                     If your are seeking where to relax, after a hectic work of the day, or you want to have business or
                     familiy lunch? or where you would like a home made dinner with friends, or you are Dating out? Here
-                    @Afrik Kitchen is the
-                    right restaurant for You as well as for every occasion.
+                    @Afrik Kitchen is the right restaurant for You as well as for every occasion.
                 </p>
             </div>
 
@@ -35,22 +34,22 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="story-image">
-                                <img src="{% static 'images/our_story.jpg' %}" alt="Our Story">
+                                <img src="{% static 'images/our_story_afrik.jpg' %}" alt="Our Story">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="story-text">
                                 <h1 class="green-heading cursive-heading">Our Story</h1>
-                                <p> We have you, Families, and single in mind when preparing our meals.
-                                    A healthy preparations in smaller portions is on the menu that youngsters will
-                                    enjoy..
+                                <p>Afrik Kitchen is one of best restaurant in Bremen City Germany, Europ
+                                    that offer African Dishes and Event booking and organisation
                                 </p>
-                                <p> Here our staff are polite ,friendly and equally happy taking your Order abd
-                                    serving You , minimal time spent in taking and
-                                    serving orders. We gurantee You of relaxed atmosphere with a soothing background
-                                    music as you enjoy your meal .
-
-                                    .</p>
+                                <p> Our staff are polite ,friendly and equally happy taking your Order and 
+                                    serving.</p>
+                                <p>  We partner with of Natural fruit Juice and Water industry Just to serve You better
+                                    Explore the their website;
+                                <a  class="green-heading" href="https://www.kaylyjuice.co.za/" target="_blank" rel="noopener"
+                                                aria-label="Visit our twitter page (opens in a new tab)">
+                                                <i class="fa-solid fa-martini-glass-citrus ms-3"></i> </a></p>
                             </div>
                         </div>
                     </div>
@@ -136,11 +135,11 @@
             </section>
 
             <footer class="footer">
-                <div class="container-wrapper">
+                <div class="container-wrapper  bg-success">
                     <div class="row">
                         <div class="col-md">
                             <div class="event-card">
-                                <h4 class="green-heading cursive-heading">The location of our restaurant</h4>
+                                <h4 class="green-heading cursive-heading ">The location of our restaurant</h4>
                                 <img src="{% static 'images/map_location.jpg' %}" alt="Event ennquiring/booking">
                             </div>
                         </div>
@@ -153,12 +152,13 @@
                                     <li>Holidays: 10pm - 4pm</li>
                                     <li>Sundays: closed</li>
                                 </ul>
-                                <p>14 Gronland Street Bremen<br>Bremen, State Germany<br>Phone: <a href="tel:+1234567890">123-456-7890</a></p>
+                                <p>14 Gronland Street Bremen<br>Bremen, State Germany<br>Phone: <a
+                                        href="tel:+1234567890">123-456-7890</a></p>
                             </div>
                         </div>
                     </div>
                 </div>
             </footer>
-            
-            
+
+
             {% endblock %}
