--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -68,7 +68,7 @@
                                     (protein, fat and oil, fish, etc.) and there is also one made for vegetarians.
                                     We prepare it the way you will like it.</p>
                                 </p>
-                                <a href="{% url 'view_menu:breakfast' %}" class="btn btn-success">Click here for
+                                <a href="" class="btn btn-success">Click here for
                                     more</a>
                             </div>
                         </div>
@@ -77,7 +77,7 @@
                                 <h3>Lunch</h3>
                                 <p>A healthy and mouth-watering fulfilling meal with the right atmosphere. This can
                                     keep you going for the rest of the day.</p>
-                                <a href="{% url 'view_menu:lunch' %}" class="btn btn-success">Click here for
+                                <a href="" class="btn btn-success">Click here for
                                     more</a>
                             </div>
                         </div>
@@ -87,7 +87,7 @@
                                 <p>A delicious and light dinner with a soothing ambiance and background music. This
                                     contains meat, fish, vegetables, onions, and oil.
                                 </p>
-                                <a href="{% url 'view_menu:dinner' %}" class="btn btn-success">Click here for
+                                <a href="" class="btn btn-success">Click here for
                                     more</a>
                             </div>
                         </div>
@@ -96,7 +96,7 @@
                                 <h3>Sides</h3>
                                 <p>A delicious side dish that can complement your meal while we prepare your order.
                                 </p>.</p>
-                                <a href="{% url 'view_menu:side' %}" class="btn btn-success">Click here for more</a>
+                                <a href="" class="btn btn-success">Click here for more</a>
                             </div>
                         </div>
                     </div>
