--- a/food/templates/food/menu_list.html
+++ b/food/templates/food/menu_list.html
@@ -90,7 +90,7 @@
                             <h5 class="card-title">{{ menuitem.name }}</h5>
                         </div>
                         <div class="card-body">
-                            <a href="{% url 'food:detail' menuitem.pk %}" class="btn btn-info">Detail</a>
+                            <a href="{% url 'food:detail' menuitem.pk %}" class="btn btn-success">Detail</a>
                         </div>
                     </div>
                 {% endif %}
@@ -107,7 +107,7 @@
                             <h5 class="card-title">{{ menuitem.name }}</h5>
                         </div>
                         <div class="card-body">
-                            <a href="{% url 'food:detail' menuitem.pk %}" class="btn btn-info">Detail</a>
+                            <a href="{% url 'food:detail' menuitem.pk %}" class="btn btn-success">Detail</a>
                         </div>
                     </div>
                 {% endif %}
@@ -124,7 +124,7 @@
                             <h5 class="card-title">{{ menuitem.name }}</h5>
                         </div>
                         <div class="card-body">
-                            <a href="{% url 'food:detail' menuitem.pk %}" class="btn btn-info">Detail</a>
+                            <a href="{% url 'food:detail' menuitem.pk %}" class="btn btn-success">Detail</a>
                         </div>
                     </div>
                 {% endif %}
@@ -141,7 +141,7 @@
                             <h5 class="card-title">{{ menuitem.name }}</h5>
                         </div>
                         <div class="card-body">
-                            <a href="{% url 'food:detail' menuitem.pk %}" class="btn btn-info">Detail</a>
+                            <a href="{% url 'food:detail' menuitem.pk %}" class="btn btn-success">Detail</a>
                         </div>
                     </div>
                 {% endif %}
