--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -135,6 +135,7 @@
             </section>
 
             <footer class="footer">
+                <h2 class="text-center white" style="color: white" >Find Us</h2>
                 <div class="container-wrapper  bg-success">
                     <div class="row">
                         <div class="col-md">
@@ -159,6 +160,4 @@
                     </div>
                 </div>
             </footer>
-
-
             {% endblock %}
