--- a/booking/templates/home_detail.html
+++ b/booking/templates/home_detail.html
@@ -1,73 +1,55 @@
+{% extends 'base.html' %}
 
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'css/table_detail.css' %}">
+{% endblock %}
 
-<head>
-    <meta charset="UTF-8">
+{% block content %}
+<!-- Main Content -->
+<div class="content">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %}</title>
-    
-    <script src="https://kit.fontawesome.com/692189991f.js" crossorigin="anonymous"></script>
+    <!-- Table Details -->
+    <div class="table">
 
-    <!-- Main StyleSheet -->
-    <link rel="stylesheet" href="{% static 'css/table_detail.css' %}">
-    {% block extra_css %}{% endblock %}
-</head>
-<body>
+        <!-- Div 1: Back to BookingHome -->
+        <div class="home">
+            <a href="{% url 'booking:TableListView' %}" class="white_color"><i class="fas fa-arrow-alt-circle-left "></i> Booking Home</a>
+        </div>
 
-    <!-- Main Content -->
-    <div class="content">
+        <!-- Div 2: Tablenformation -->
+        <div class="table-info">
+            <h1>{{table_capacity}}</h1>
+            <h3 class="white_color text-center">A high quality and comfortable table for every occassion </h3>
+        </div>
 
-        <!-- Table Details -->
-        <div class="table">
+        <!-- Div 3: Table Booking Form -->
+        <form id="booking-form" action="" method="POST">
+            {% csrf_token %}
 
-            <!-- Div 1: Back to BookingHome -->
-            <div class="home">
-                <a href="{% url 'booking:TableListView' %}" class="white_color"><i class="fas fa-arrow-alt-circle-left "></i> Booking Home</a>
+            <!-- Input Div -->
+            <!-- <div class="input-div">
+                <label for="id_table_number">Table Number:</label>
+                <input type="number" name="table_number" id="id_table_number">
+            </div> -->
+            <div class="input-div">
+                <label for="id_reservation_date">Reservation Date:</label>
+                {{ form.reservation_date }}
             </div>
-            
 
-            <!-- Div 2: Tablenformation -->
-            <div class="table-info">
-                <h1>{{table_capacity}}</h1>
-                <h3 class="white_color text-center">A high quality and comfortable table for every occassion </h3>
+            <div class="input-div">
+                <label for="id_reservation_date">Reservation Time:</label>
+                {{ form.reservation_time }}
             </div>
 
-            <!-- Div 3: Table Booking Form -->
-            <form id="booking-form" action="" method="POST">
-                {% csrf_token %}
+            <!-- Input Div -->
+            <div class="input-div">
+                <button type="submit">Book the Table</button>
+            </div>
+        </form>
 
-                <!-- Input Div -->
-                <!-- <div class="input-div">
-                    <label for="id_table_number">Table Number:</label>
-                    <input type="number" name="table_number" id="id_table_number">
-                </div> -->
-                <div class="input-div">
-                    <label for="id_reservation_date">Reservation Date:</label>
-                    {{ form.reservation_date }}
-                </div>
+    </div> 
 
-                <div class="input-div">
-                    <label for="id_reservation_date">Reservation Time:</label>
-                    {{ form.reservation_time }}
-                </div>
-
-                <!-- Input Div -->
-                <div class="input-div">
-                    <button type="submit">Book the Table</button>
-                </div>
-            </form>
-
-        </div> 
-
-    </div> <!-- END Main Content Div -->
-
-</body>
-
-</html>
-
-
-
+</div> <!-- END Main Content Div -->
+{% endblock %}
