--- a/food/templates/food/delete_menuitem.html
+++ b/food/templates/food/delete_menuitem.html
@@ -7,6 +7,8 @@
             {% csrf_token %}
             <p>Are you sure you want to delete this menu?</p>
             <button type="submit" class="btn btn-danger">Delete</button>
+           
+            <a href="{% url 'food:manage_menu' %}" class="btn btn-success">Go Back</a>
         </form>
     </div>
 
