Modify most of the template used

--- a/booking/templates/booking/update_bookingxxx.html
+++ b/booking/templates/booking/update_bookingxxx.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Cancel Booking</h2>
+  <h2>Update Booking</h2>
   <p>Are you sure you want to Update the booking for {{ booking.user }}?</p>
   <form method="POST" action="{% url 'cancel_booking' booking.id %}">
     {% csrf_token %}
