--- a/static/css/table_detail.css
+++ b/static/css/table_detail.css
@@ -1,7 +1,7 @@
 /* Root CSS */
 
 *{
-    padding:10px;
+    padding:0px;
     margin:0;
     box-sizing: border-box;
     text-decoration:  none;
@@ -39,24 +39,8 @@ Main Divs
 
 
 
-/* Inside Sub Divs
 
-.image img{
-    flex:1;
-    max-height: 99.2vh;
-}
-
-i{
-    color:#ebf0ee;
-    font-size: 2rem;
-}
-
-.white_color {
-  color: white;
-} */
-
-
-/* Form's CSS */
+/* Form's CSS *
 
 .input-div{
     flex: 1 1 auto;
@@ -88,7 +72,7 @@ input, button{
 }
 
 .table {
-  width: 500px; 
+  width: 1100px; 
   padding: 20px;
   background-color: #383636;
   border-radius: 10px;
@@ -129,11 +113,11 @@ label {
   font-weight: bold;
   margin-bottom: 5px;
 }
-
+input[table="text"],
 input[type="text"],
 input[type="date"],
 input[type="time"] {
-  width: 10%; */
+  width: 50%; 
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -166,3 +150,4 @@ button[type="submit"]:hover {
         padding: 10px;
     }
 }
+
