--- a/booking/templates/booking/delete_booking.html
+++ b/booking/templates/booking/delete_booking.html
@@ -5,6 +5,6 @@
   <p>Are you sure you want to cancel the booking for {{ booking.user }}?</p>
   <form method="POST" action="{% url 'delete_booking' booking.id %}">
     {% csrf_token %}
-    <button type="submit">Dele Booking</button>
+    <button type="submit">Delete Booking</button>
   </form>
 {% endblock %}
