--- a/booking/templates/booking/managebookings.html
+++ b/booking/templates/booking/managebookings.html
@@ -5,6 +5,14 @@
   <form method="POST" action="{% url 'booking:create_booking' %}">
     {% csrf_token %}
     {{ form.as_p }}
+
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
     <button type="submit">Create Booking</button>
   </form>
 
@@ -15,8 +23,7 @@
         Booking ID: {{ booking.id }}<br>
         Booking Date: {{ booking.reservation_date }}<br>
         Booking Time: {{ booking.reservation_time }}<br>
-        <!-- Option to Cancel a Booking -
-        <a href="{% url 'booking:cancel_booking' booking.id %}">Cancel</a> |-->
+       
         <!-- Option to Delete a Booking -->
         <a href="{% url 'booking:delete_booking' booking.id %}">Cancel</a> |
         <!-- Option to Edit a Booking -->
