--- a/food/templates/food/update_menu.html
+++ b/food/templates/food/update_menu.html
@@ -30,7 +30,7 @@
         }
 
         .form-section button[type="submit"]:hover {
-            /* background-color: green; */
+            * background-color: green; *
         }
 
 /* Media queries for mobile responsiveness */
@@ -48,8 +48,6 @@
                 font-size: 14px;
             }
         }
-
-
     </style>
 {% endblock %}
 
