--- a/static/css/style.css
+++ b/static/css/style.css
@@ -624,7 +624,7 @@ th {
   margin-bottom: 10px;
 }
 
-/* Styles for cancel, delete, update, and reboot links */
+/* Styles for cancel, delete, update, and reboot links *
 .cancel,
 .delete,
 .update,
@@ -791,26 +791,6 @@ th {
     }
   }
   
-
-
-
-
-/* Bootstrap toast */
-.toasts {
-    position: fixed;
-    top: 127px;
-    right: 0px;
-    z-index: 99999999999;
-    width: 300px;
-}
-
-.toasts .toast {
-    background: #ddc439;
-}
-
-.toast-body {
-    font-size: 1rem;
-}
 
 /* Media queries */
 @media screen and (min-width: 800px) {
